# gpt-object-detection

./: .gitignore  README.md  collect_annotation.json  main.py  pyproject.toml
